--- a/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/feeagent/ChangePassword.xhtml
+++ b/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/feeagent/ChangePassword.xhtml
@@ -5,7 +5,6 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:p="http://primefaces.org/ui">
-
 <h:head>
 	<f:metadata>
 		<f:event listener="#{feeAgentHomeController.initData}"
@@ -14,46 +13,57 @@
 	<title>TaxiNet</title>
 </h:head>
 <h:body>
-	<p:megaMenu orientation="horizontal">
-		<p:menuitem value="#{msg['feeAgent.homePage']}"
-			url="../feeagent/AgentHome.xhtml" style="background:orange"></p:menuitem>
-		<p:menuitem value="#{msg['feeAgent.transactionHistory']}"
-			url="../feeagent/TransactionHistory.xhtml"></p:menuitem>
-	</p:megaMenu>
-	<p:megaMenu orientation="vertical">
-		<p:menuitem value="#{msg['feeAgent.dashboard']}"
-			url="../feeagent/Dashboard.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['feeAgent.contactInfo']}"
-			url="../feeagent/ContactInfo.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['feeAgent.accountCharging']}"
-			url="../feeagent/AgentHome.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['feeAgent.agentInvoice']}"
-			url="../feeagent/AgentHome.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['feeAgent.transactionInvoice']}"
-			url="../feeagent/ChargingInvoice.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['feeAgent.supportQnA']}"
-			url="../feeagent/AgentHome.xhtml"></p:menuitem>
-	</p:megaMenu>
-
-	<br></br>
-
-	<center>
-		<h1>#{msg['feeAgent.passwordChange']}</h1>
-		<h:panelGrid columns="2">
-			<p:outputLabel for="oldPassword"
-				value="#{msg['feeAgent.oldPassword']}:" />
-			<p:inputText id="oldPassword" required="true" />
-			<p:outputLabel for="newPassword"
-				value="#{msg['feeAgent.newPassword']}:" />
-			<p:inputText id="newPassword" required="true" />
-			<p:outputLabel for="passwordConfirm"
-				value="#{msg['feeAgent.passwordConfirm']}:" />
-			<p:inputText id="passwordConfirm" required="true" />
-		</h:panelGrid>
+	<h:form id="change-pass-form" prependId="false">
+		<p:megaMenu orientation="horizontal">
+			<p:menuitem value="#{msg['feeAgent.homePage']}"
+				url="../feeagent/AgentHome.xhtml" style="background:orange"></p:menuitem>
+			<p:menuitem value="#{msg['feeAgent.transactionHistory']}"
+				url="../feeagent/TransactionHistory.xhtml"></p:menuitem>
+		</p:megaMenu>
+		<p:megaMenu orientation="vertical">
+			<p:menuitem value="#{msg['feeAgent.dashboard']}"
+				url="../feeagent/Dashboard.xhtml"></p:menuitem>
+			<p:menuitem value="#{msg['feeAgent.contactInfo']}"
+				url="../feeagent/ContactInfo.xhtml"></p:menuitem>
+			<p:menuitem value="#{msg['feeAgent.accountCharging']}"
+				url="../feeagent/AgentHome.xhtml"></p:menuitem>
+			<p:menuitem value="#{msg['feeAgent.agentInvoice']}"
+				url="../feeagent/AgentHome.xhtml"></p:menuitem>
+			<p:menuitem value="#{msg['feeAgent.transactionInvoice']}"
+				url="../feeagent/ChargingInvoice.xhtml"></p:menuitem>
+			<p:menuitem value="#{msg['feeAgent.supportQnA']}"
+				url="../feeagent/AgentHome.xhtml"></p:menuitem>
+		</p:megaMenu>
 
 		<br></br>
-
-		<p:commandButton value="#{msg['feeAgent.save']}" />
-	</center>
+		<center>
+			<h1>#{msg['feeAgent.passwordChange']}</h1>
+			<p:growl id="messages" autoUpdate="true"/>
+			<h:panelGrid columns="3" id="change-form">
+				<p:outputLabel for="oldPassword"
+					value="#{msg['feeAgent.oldPassword']}:" />
+				<p:password id="oldPassword" required="true"
+					value="#{changePassController.password}"
+					requiredMessage="Password must not be null" />
+				<p:message for="oldPassword" showDetail="true"/>
+				<p:outputLabel for="newPassword"
+					value="#{msg['feeAgent.newPassword']}:" />
+				<p:password id="newPassword" required="true"
+					requiredMessage="New password must not be null"
+					value="#{changePassController.newPass}" />
+				<p:message for="newPassword" showDetail="true"/>
+				<p:outputLabel for="passwordConfirm"
+					value="#{msg['feeAgent.passwordConfirm']}:" />
+				<p:password id="passwordConfirm" required="true"
+					value="#{changePassController.renewPass}"
+					requiredMessage="Confirm password must not be null" />
+				<p:message for="passwordConfirm" showDetail="true"/>
+			</h:panelGrid>
+			<br></br>
+			<p:commandButton value="#{msg['feeAgent.save']}"
+				validateClient="true" update="change-form"
+				actionListener="#{changePassController.changePassButton}"/>
+		</center>
+	</h:form>
 </h:body>
 </html>
