--- a/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/driver/ContactInfo.xhtml
+++ b/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/driver/ContactInfo.xhtml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
@@ -8,98 +10,61 @@
 
 <h:head>
 	<f:metadata>
-		<f:event listener="#{feeAgentHomeController.initData}"
-			type="preRenderView"></f:event>
+		<f:event listener="#{driverCIController.init}" type="preRenderView" />
 	</f:metadata>
 	<title>TaxiNet</title>
 </h:head>
 <h:body>
-	<p:megaMenu orientation="horizontal">
-		<p:menuitem value="#{msg['feeAgent.homePage']}"
-			url="../driver/Dashboard.xhtml"></p:menuitem>
-	</p:megaMenu>
-	<p:megaMenu orientation="vertical">
-		<p:menuitem value="#{msg['feeAgent.dashboard']}"
-			url="../driver/Dashboard.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['feeAgent.contactInfo']}"
-			url="../driver/ContactInfo.xhtml" style="background:orange"></p:menuitem>
-		<p:menuitem value="#{msg['driver.document']}"
-			url="../driver/Document.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['driver.vehicle']}"
-			url="../driver/Vehicles.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['driver.partnerInvoice']}"
-			url="../driver/PartnerInvoices.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['driver.tripsInvoice']}"
-			url="../driver/TripInvoices.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['driver.driver']}"
-			url="../driver/Drivers.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['driver.liveStatus']}"
-			url="../driver/LiveStatus.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['driver.promotionRegister']}"
-			url="../driver/Dashboard.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['feeAgent.supportQnA']}"
-			url="../driver/Dashboard.xhtml"></p:menuitem>
-	</p:megaMenu>
+	<f:view>
+		<h:form id="ContactInfo" prependId="false"
+			enctype="multipart/form-data">
+			<p:growl id="msg" showDetail="true" />
+			<center>
+				<p:panel header="Thông Tin Liên Hệ">
+					<h4>CONTACT INFO (Thông Tin Liên Hệ)</h4>
+					<h5>Company Information</h5>
+					<h:panelGrid id="ComInfo" columns="2">
+						<!-- <p:outputLabel for="companyName"
+							value="#{msg['driver.companyName']}"></p:outputLabel>
+						<h:inputText id="companyName" value=""></h:inputText> -->
+					</h:panelGrid>
+					<h4>Personal Information (Thông Tin Cá Nhân)</h4>
+					<h:panelGrid id="PerInfo" columns="2">
+						<p:outputLabel for="Email" value="#{msg['driver.email']}"></p:outputLabel>
+						<h:inputText id="Email"
+							value="#{driverCIController.email}"></h:inputText>
+						<p:outputLabel for="Password" value="#{msg['driver.password']}"></p:outputLabel>
+						<h:inputText id="Password" value="#{driverCIController.passWord}"></h:inputText>
+						<!-- <p:outputLabel for="firstname"
+							value="#{msg['driver.firstname']}" />
+							<p:inputText id="firstname"
+							value="#{driverCIController.firstName}"></p:inputText>
+						<p:outputLabel for="lastname"
+							value="#{msg['driver.lastname']}" />
+						<p:inputText id="lastname"
+							value="#{driverCIController.lastName}"></p:inputText> -->
+					</h:panelGrid>
+					<h4>TaxiNet Account Info (Thông tin tài khoản)</h4>
+					<h:panelGrid id="AccInfo" columns="2">
 
-	<br></br>
-
-	<p:commandButton value="#{msg['feeAgent.infoEdit']}" />
-	<br></br>
-	<p:graphicImage value="Ảnh" />
-	<br></br>
-	<p:commandButton value="#{msg['feeAgent.imageUpload']}" />
-	
-	<br></br>
-	
-	<center>
-		<h1>#{msg['feeAgent.contactInfo']}</h1>
-		<br></br>
-		<h2>#{msg['driver.companyInfo']}</h2>
-		<h:panelGrid columns="2">
-			<p:outputLabel for="agentName" value="#{msg['driver.companyName']}:" />
-			<p:inputText id="agentName" readonly="true"/>
-			<p:outputLabel for="address1" value="#{msg['feeAgent.address']} 1:" />
-			<p:inputText id="address1" readonly="true"/>
-			<p:outputLabel for="city" value="#{msg['feeAgent.city']}:" />
-			<p:inputText id="city" readonly="true"/>
-			<p:outputLabel for="zipPostalCode"
-				value="#{msg['feeAgent.zipPostalCode']}:" />
-			<p:inputText id="zipPostalCode" readonly="true"/>
-			<p:outputLabel for="phoneNo" value="#{msg['riderRegister.phoneNo']}:" />
-			<p:inputText id="phoneNo" readonly="true"/>
-			<p:outputLabel for="VATCode" value="#{msg['feeAgent.VATCode']}:" />
-			<p:inputText id="VATCode" readonly="true"/>
-		</h:panelGrid>
-		
-		<br></br>
-		
-		<h2>#{msg['feeAgent.personalInfo']}</h2>
-		<h:panelGrid columns="2">
-			<p:outputLabel for="name" value="#{msg['riderRegister.name']}:" />
-			<p:inputText id="name" readonly="true"/>
-			<p:outputLabel for="surname" value="#{msg['riderRegister.surname']}:" />
-			<p:inputText id="surname" readonly="true"/>
-			<p:outputLabel for="email" value="#{msg['riderRegister.email']}:" />
-			<p:inputText id="email" readonly="true"/>
-			<p:outputLabel for="phoneNo" value="#{msg['riderRegister.phoneNo']}:" />
-			<p:inputText id="phoneNo" readonly="true"/>
-			<p:outputLabel for="language"
-				value="#{msg['riderRegister.languages']}:" />
-			<p:inputText id="language" readonly="true"/>
-		</h:panelGrid>
-		
-		<br></br>
-		
-		<h2>#{msg['feeAgent.accountInfo']}</h2>
-		<h:panelGrid columns="2">
-			<p:outputLabel for="account" value="#{msg['login.userName']}:" />
-			<p:inputText id="account" readonly="true"/>
-			<p:outputLabel for="promotionCode"
-				value="#{msg['feeAgent.promotionCode']}:" />
-			<p:inputText id="promotionCode" readonly="true"/>
-		</h:panelGrid>
-	</center>
-
-
+					</h:panelGrid>
+					<br />
+					<br />
+					<p:commandButton value="Lưu (Save)" validateClient="true"
+						action="#{driverCIController.updateForm}" update="ContactInfo"></p:commandButton>
+					<!-- <h:inputFile value=""></h:inputFile>
+					<h:commandButton value="Upload file"
+						actionListener="#{uploadImgController.upLoadFile}">
+					</h:commandButton>
+					<br />
+					<h:graphicImage value="#{uploadImgController.imgExample}">
+					</h:graphicImage> -->
+					<br />
+					<p:outputLabel
+						value="Bạn có cấu hỏi vui lòng liên hệ với chúng tôi" />
+				</p:panel>
+			</center>
+		</h:form>
+	</f:view>
 </h:body>
 </html>
