--- a/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/driver/Drivers.xhtml
+++ b/trunk/WIP/Sources/Backend/TaxiNet/src/main/webapp/xhtml/driver/Drivers.xhtml
@@ -14,57 +14,60 @@
 	<title>TaxiNet</title>
 </h:head>
 <h:body>
-	<p:megaMenu orientation="horizontal">
-		<p:menuitem value="#{msg['feeAgent.homePage']}"
-			url="../driver/Dashboard.xhtml"></p:menuitem>
-	</p:megaMenu>
-	<p:megaMenu orientation="vertical">
-		<p:menuitem value="#{msg['feeAgent.dashboard']}"
-			url="../driver/Dashboard.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['feeAgent.contactInfo']}"
-			url="../driver/ContactInfo.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['driver.document']}"
-			url="../driver/Document.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['driver.vehicle']}"
-			url="../driver/Vehicles.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['driver.partnerInvoice']}"
-			url="../driver/PartnerInvoices.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['driver.tripsInvoice']}"
-			url="../driver/TripInvoices.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['driver.driver']}"
-			url="../driver/Drivers.xhtml" style="background:orange"></p:menuitem>
-		<p:menuitem value="#{msg['driver.liveStatus']}"
-			url="../driver/LiveStatus.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['driver.promotionRegister']}"
-			url="../driver/Dashboard.xhtml"></p:menuitem>
-		<p:menuitem value="#{msg['feeAgent.supportQnA']}"
-			url="../driver/Dashboard.xhtml"></p:menuitem>
-	</p:megaMenu>
+	<h:form id="driver-form" prependId="false">
+		<p:megaMenu orientation="horizontal">
+			<p:menuitem value="#{msg['feeAgent.homePage']}"
+				url="../driver/Dashboard.xhtml"></p:menuitem>
+		</p:megaMenu>
+		<p:megaMenu orientation="vertical">
+			<p:menuitem value="#{msg['feeAgent.dashboard']}"
+				url="../driver/Dashboard.xhtml"></p:menuitem>
+			<p:menuitem value="#{msg['feeAgent.contactInfo']}"
+				url="../driver/ContactInfo.xhtml"></p:menuitem>
+			<p:menuitem value="#{msg['driver.document']}"
+				url="../driver/Document.xhtml"></p:menuitem>
+			<p:menuitem value="#{msg['driver.vehicle']}"
+				url="../driver/Vehicles.xhtml"></p:menuitem>
+			<p:menuitem value="#{msg['driver.partnerInvoice']}"
+				url="../driver/PartnerInvoices.xhtml"></p:menuitem>
+			<p:menuitem value="#{msg['driver.tripsInvoice']}"
+				url="../driver/TripInvoices.xhtml"></p:menuitem>
+			<p:menuitem value="#{msg['driver.driver']}"
+				url="../driver/Drivers.xhtml" style="background:orange"></p:menuitem>
+			<p:menuitem value="#{msg['driver.liveStatus']}"
+				url="../driver/LiveStatus.xhtml"></p:menuitem>
+			<p:menuitem value="#{msg['driver.promotionRegister']}"
+				url="../driver/Dashboard.xhtml"></p:menuitem>
+			<p:menuitem value="#{msg['feeAgent.supportQnA']}"
+				url="../driver/Dashboard.xhtml"></p:menuitem>
+		</p:megaMenu>
 
-	<br></br>
+		<br></br>
 
-	<h1>#{msg['driver.drivers']}</h1>
-	<p:dataTable id="driver-list" paginator="true" rows="10"
-		paginatorPosition="top"
-		paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} ">
-		<p:column headerText="#{msg['feeAgent.autonumber']}"
-			style="text-align:left" width="35">
-		</p:column>
-		<p:column headerText="#{msg['riderRegister.name']}"
-			style="text-align:left">
-		</p:column>
-		<p:column headerText="#{msg['driver.currentPosition']}"
-			style="text-align:left">
-		</p:column>
-		<p:column headerText="#{msg['driver.car']}" style="text-align:left">
-		</p:column>
-		<p:column headerText="#{msg['driver.status']}" style="text-align:left">
-		</p:column>
-		<f:facet name="footer">
+		<h1>#{msg['driver.drivers']}</h1>
+		<p:dataTable id="driver-list" paginator="true" rows="10"
+			paginatorPosition="top"
+			paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} ">
+			<p:column headerText="#{msg['feeAgent.autonumber']}"
+				style="text-align:left" width="35">
+			</p:column>
+			<p:column headerText="#{msg['riderRegister.name']}"
+				style="text-align:left">
+			</p:column>
+			<p:column headerText="#{msg['driver.currentPosition']}"
+				style="text-align:left">
+			</p:column>
+			<p:column headerText="#{msg['driver.car']}" style="text-align:left">
+			</p:column>
+			<p:column headerText="#{msg['driver.status']}"
+				style="text-align:left">
+			</p:column>
+			<f:facet name="footer">
  		#{msg['feeAgent.show']}#{msg['feeAgent.of']}#{msg['driver.driver']}
 		</f:facet>
-	</p:dataTable>
-	<br></br>
-	<p:commandButton value="#{msg['driver.driverAdd']}"/>
+		</p:dataTable>
+		<br></br>
+		<p:commandButton value="#{msg['driver.driverAdd']}" />
+	</h:form>
 </h:body>
 </html>
